Se implementó RMSprop pero se encontró un problema de desbordamiento con la función sigmoide

--- a/Consola.ipynb
+++ b/Consola.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -63,21 +63,22 @@
       "\n",
       " Directorio de C:\\Users\\carlo\\Documents\\Codes\\RedesNeuronales\\Neuronal-Red-NumPy\n",
       "\n",
-      "04/02/2024  10:54 p. m.    <DIR>          .\n",
-      "26/01/2024  01:05 p. m.    <DIR>          ..\n",
-      "04/02/2024  10:54 p. m.    <DIR>          .ipynb_checkpoints\n",
-      "31/01/2024  10:38 p. m.            10,963 Consola.ipynb\n",
+      "05/02/2024  05:56 p. m.    <DIR>          .\n",
+      "05/02/2024  03:58 p. m.    <DIR>          ..\n",
+      "04/02/2024  10:56 p. m.    <DIR>          .ipynb_checkpoints\n",
+      "05/02/2024  05:56 p. m.    <DIR>          __pycache__\n",
+      "05/02/2024  05:56 p. m.            13,084 Consola.ipynb\n",
       "24/01/2024  08:37 p. m.             1,868 DataVisualization.py\n",
-      "31/01/2024  10:38 p. m.               740 ejemplo.py\n",
+      "05/02/2024  05:56 p. m.               773 ejemplo.py\n",
       "24/01/2024  08:37 p. m.        17,051,982 mnist.pkl.gz\n",
       "24/01/2024  08:37 p. m.             3,509 mnist_loader.py\n",
-      "04/02/2024  10:52 p. m.            12,320 network.py\n",
+      "05/02/2024  05:56 p. m.            12,466 network.py\n",
       "24/01/2024  08:37 p. m.            88,484 Numero3.jpg\n",
       "24/01/2024  08:32 p. m.                20 README.md\n",
-      "31/01/2024  10:37 p. m.           191,232 red_prueba1.pkl\n",
+      "05/02/2024  05:56 p. m.           191,232 red_prueba1.pkl\n",
       "24/01/2024  08:37 p. m.               386 UsandoNetwork.py\n",
-      "              10 archivos     17,361,504 bytes\n",
-      "               3 dirs  18,774,806,528 bytes libres\n"
+      "              10 archivos     17,363,804 bytes\n",
+      "               4 dirs  14,464,200,704 bytes libres\n"
      ]
     }
    ],
@@ -87,44 +88,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 0: 8226 / 10000\n",
-      "Epoch 1: 8324 / 10000\n",
-      "Epoch 2: 8391 / 10000\n",
-      "Epoch 3: 8450 / 10000\n",
-      "Epoch 4: 8487 / 10000\n",
-      "Epoch 5: 8524 / 10000\n",
-      "Epoch 6: 8505 / 10000\n",
-      "Epoch 7: 8536 / 10000\n",
-      "Epoch 8: 8544 / 10000\n",
-      "Epoch 9: 8543 / 10000\n",
-      "Epoch 10: 8535 / 10000\n",
-      "Epoch 11: 8547 / 10000\n",
-      "Epoch 12: 8543 / 10000\n",
-      "Epoch 13: 8574 / 10000\n",
-      "Epoch 14: 8565 / 10000\n",
-      "Epoch 15: 8566 / 10000\n",
-      "Epoch 16: 8585 / 10000\n",
-      "Epoch 17: 8601 / 10000\n",
-      "Epoch 18: 8594 / 10000\n",
-      "Epoch 19: 8558 / 10000\n",
-      "Epoch 20: 8563 / 10000\n",
-      "Epoch 21: 8596 / 10000\n",
-      "Epoch 22: 8601 / 10000\n",
-      "Epoch 23: 8610 / 10000\n",
-      "Epoch 24: 8606 / 10000\n",
-      "Epoch 25: 8593 / 10000\n",
-      "Epoch 26: 8573 / 10000\n",
-      "Epoch 27: 8584 / 10000\n",
-      "Epoch 28: 8600 / 10000\n",
-      "Epoch 29: 8613 / 10000\n",
-      "El tiempo de ejecución fue de 158.22949290275574 segundos.\n"
+      "Epoch 0: 7984 / 10000\n",
+      "Epoch 1: 8260 / 10000\n",
+      "Epoch 2: 8255 / 10000\n",
+      "Epoch 3: 8257 / 10000\n",
+      "Epoch 4: 8049 / 10000\n",
+      "Epoch 5: 8414 / 10000\n",
+      "Epoch 6: 8417 / 10000\n",
+      "Epoch 7: 8414 / 10000\n",
+      "Epoch 8: 7864 / 10000\n",
+      "Epoch 9: 8641 / 10000\n",
+      "Epoch 10: 8405 / 10000\n",
+      "Epoch 11: 8313 / 10000\n",
+      "Epoch 12: 8685 / 10000\n",
+      "Epoch 13: 8782 / 10000\n",
+      "Epoch 14: 8664 / 10000\n",
+      "Epoch 15: 8690 / 10000\n",
+      "Epoch 16: 8790 / 10000\n",
+      "Epoch 17: 8828 / 10000\n",
+      "Epoch 18: 8641 / 10000\n",
+      "Epoch 19: 8376 / 10000\n",
+      "Epoch 20: 8641 / 10000\n",
+      "Epoch 21: 8602 / 10000\n",
+      "Epoch 22: 8806 / 10000\n",
+      "Epoch 23: 8854 / 10000\n",
+      "Epoch 24: 8724 / 10000\n",
+      "Epoch 25: 8748 / 10000\n",
+      "Epoch 26: 8807 / 10000\n",
+      "Epoch 27: 8695 / 10000\n",
+      "Epoch 28: 8838 / 10000\n",
+      "Epoch 29: 8761 / 10000\n",
+      "El tiempo de ejecución fue de 199.19170689582825 segundos.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\carlo\\Documents\\Codes\\RedesNeuronales\\Neuronal-Red-NumPy\\network.py:160: RuntimeWarning: overflow encountered in exp\n",
+      "  return 1.0/(1.0+np.exp(-z)) #Se define la función de activación\n"
      ]
     }
    ],
