Se modificó Adam para que fuera más eficiente

--- a/Consola.ipynb
+++ b/Consola.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -88,44 +88,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 0: 7148 / 10000\n",
-      "Epoch 1: 7117 / 10000\n",
-      "Epoch 2: 7012 / 10000\n",
-      "Epoch 3: 7912 / 10000\n",
-      "Epoch 4: 8445 / 10000\n",
-      "Epoch 5: 7454 / 10000\n",
-      "Epoch 6: 8012 / 10000\n",
-      "Epoch 7: 8124 / 10000\n",
-      "Epoch 8: 7973 / 10000\n",
-      "Epoch 9: 8394 / 10000\n",
-      "Epoch 10: 8276 / 10000\n",
-      "Epoch 11: 8083 / 10000\n",
-      "Epoch 12: 7912 / 10000\n",
-      "Epoch 13: 7822 / 10000\n",
-      "Epoch 14: 8258 / 10000\n",
-      "Epoch 15: 8091 / 10000\n",
-      "Epoch 16: 8156 / 10000\n",
-      "Epoch 17: 8294 / 10000\n",
-      "Epoch 18: 8269 / 10000\n",
-      "Epoch 19: 8213 / 10000\n",
-      "Epoch 20: 8587 / 10000\n",
-      "Epoch 21: 8265 / 10000\n",
-      "Epoch 22: 8188 / 10000\n",
-      "Epoch 23: 8266 / 10000\n",
-      "Epoch 24: 8104 / 10000\n",
-      "Epoch 25: 8265 / 10000\n",
-      "Epoch 26: 7956 / 10000\n",
-      "Epoch 27: 8376 / 10000\n",
-      "Epoch 28: 8433 / 10000\n",
-      "Epoch 29: 8108 / 10000\n",
-      "El tiempo de ejecución fue de 461.82183265686035 segundos.\n"
+      "Epoch 0: 9109 / 10000\n",
+      "Epoch 1: 9144 / 10000\n",
+      "Epoch 2: 9167 / 10000\n",
+      "Epoch 3: 9178 / 10000\n",
+      "Epoch 4: 9250 / 10000\n",
+      "Epoch 5: 9274 / 10000\n",
+      "Epoch 6: 9228 / 10000\n",
+      "Epoch 7: 9236 / 10000\n",
+      "Epoch 8: 9194 / 10000\n",
+      "Epoch 9: 9278 / 10000\n",
+      "Epoch 10: 9254 / 10000\n",
+      "Epoch 11: 9329 / 10000\n",
+      "Epoch 12: 9314 / 10000\n",
+      "Epoch 13: 9312 / 10000\n",
+      "Epoch 14: 9316 / 10000\n",
+      "Epoch 15: 9315 / 10000\n",
+      "Epoch 16: 9336 / 10000\n",
+      "Epoch 17: 9373 / 10000\n",
+      "Epoch 18: 9299 / 10000\n",
+      "Epoch 19: 9368 / 10000\n",
+      "Epoch 20: 9332 / 10000\n",
+      "Epoch 21: 9321 / 10000\n",
+      "Epoch 22: 9369 / 10000\n",
+      "Epoch 23: 9301 / 10000\n",
+      "Epoch 24: 9395 / 10000\n",
+      "Epoch 25: 9428 / 10000\n",
+      "Epoch 26: 9402 / 10000\n",
+      "Epoch 27: 9256 / 10000\n",
+      "Epoch 28: 9417 / 10000\n",
+      "Epoch 29: 9357 / 10000\n",
+      "El tiempo de ejecución fue de 164.7077558040619 segundos.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\carlo\\Documents\\Codes\\RedesNeuronales\\Neuronal-Red-NumPy\\network.py:171: RuntimeWarning: overflow encountered in exp\n",
+      "  return 1.0/(1.0+np.exp(-z)) #Se define la función de activación\n"
      ]
     }
    ],
@@ -135,7 +143,7 @@
     "# Guarda el tiempo de inicio\n",
     "start_time = time.time()\n",
     "\n",
-    "# Tu código aquí\n",
+    "\n",
     "!python ejemplo.py\n",
     "\n",
     "# Guarda el tiempo de finalización\n",
@@ -144,7 +152,7 @@
     "\n",
     "execution_time = end_time - start_time\n",
     "\n",
-    "print(f\"El tiempo de ejecución fue de {execution_time} segundos.\")#Función de costo original(cuadratica)"
+    "print(f\"El tiempo de ejecución fue de {execution_time} segundos.\")"
    ]
   },
   {
